package main;

public interface IRequeteHttp {
    void afficher();
}